--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.4",
+    "@vercel/analytics": "^0.1.8",
     "firebase": "^9.16.0",
     "next": "13.1.4",
     "react": "18.2.0",
